fixed 3 etapes alignment on responsive

--- a/src/mrs/static/sass/index.sass
+++ b/src/mrs/static/sass/index.sass
@@ -226,8 +226,8 @@
 
       p
         margin: auto
-        display: flex
-        align-items: center
+        height: 1.5rem
+
 
   #index-footer--wrapper
     display: flex
